[package]
name = "calc"
version = "0.1.0"
authors = ["NoHamster <pfoch.tomke@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logos = "0.12.1"
logos-derive = "0.12.1"
statrs = "0.16.0"
num-traits = "0.2.15"

[profile.release]
strip = true
lto = true
codegen-units = 1